force-app/main/default/objects/MRIS_Survey__c/MRIS_Survey__c.object-meta.xml
<CustomObject>
    <label>MRIS Survey</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>MRIS Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MRIS Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>