force-app/main/default/objects/MRIS_Survey__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MRIS Surveys</relationshipLabel>
    <relationshipName>MRIS_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>