force-app/main/default/objects/MRIS_Survey__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>MRIS Surveys</relationshipLabel>
    <relationshipName>MRIS_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>