force-app/main/default/objects/MRIS_Survey__c/fields/Case_Number_string__c.field-meta.xml
<CustomField>
    <fullName>Case_Number_string__c</fullName>
    <label>Case Number string</label>
    <length>50</length>
    <type>Text</type>
</CustomField>