force-app/main/default/objects/MRIS_Survey__c/fields/case_subject__c.field-meta.xml
<CustomField>
    <fullName>case_subject__c</fullName>
    <formula>Case__r.Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Subject</label>
    <type>Text</type>
</CustomField>