force-app/main/default/objects/MRIS_Survey__c/fields/Case_Subject_text__c.field-meta.xml
<CustomField>
    <fullName>Case_Subject_text__c</fullName>
    <label>Case Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>