force-app/main/default/objects/MRIS_Survey__c/fields/Contact_us__c.field-meta.xml
<CustomField>
    <fullName>Contact_us__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact us?</label>
    <type>Checkbox</type>
</CustomField>