force-app/main/default/objects/MRIS_Survey__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MRIS Surveys</relationshipLabel>
    <relationshipName>MRIS_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>