force-app/main/default/objects/MRIS_Survey__c/fields/Issue_resolution__c.field-meta.xml
<CustomField>
    <fullName>Issue_resolution__c</fullName>
    <label>Issue Resolution</label>
    <length>1</length>
    <type>Text</type>
</CustomField>