force-app/main/default/objects/MRIS_Survey__c/fields/Overall_performance__c.field-meta.xml
<CustomField>
    <fullName>Overall_performance__c</fullName>
    <label>Overall performance</label>
    <length>1</length>
    <type>Text</type>
</CustomField>