force-app/main/default/objects/MRIS_Survey__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Response URL</label>
    <type>Url</type>
</CustomField>