force-app/main/default/objects/MRIS_Survey__c/fields/Speed_of_Response__c.field-meta.xml
<CustomField>
    <fullName>Speed_of_Response__c</fullName>
    <label>Speed of Response</label>
    <length>1</length>
    <type>Text</type>
</CustomField>