force-app/main/default/objects/MRIS_Survey__c/fields/Team_knowledge__c.field-meta.xml
<CustomField>
    <fullName>Team_knowledge__c</fullName>
    <label>Team knowledge</label>
    <length>1</length>
    <type>Text</type>
</CustomField>