force-app/main/default/objects/MRIS_Survey__c/fields/Team_professionalism__c.field-meta.xml
<CustomField>
    <fullName>Team_professionalism__c</fullName>
    <label>Team professionalism</label>
    <length>1</length>
    <type>Text</type>
</CustomField>